[package]
name = "timestampvm"
version = "0.0.16" # https://crates.io/crates/timestampvm
edition = "2021"
rust-version = "1.69"
publish = true
description = "Timestamp VM in Rust"
documentation = "https://docs.rs/timestampvm"
license = "BSD-3-Clause"
repository = "https://github.com/ava-labs/timestampvm-rs"
readme = "../README.md"

[dependencies]
avalanche-types = { version = "0.0.399", features = ["subnet", "codec_base64"] } # https://crates.io/crates/avalanche-types
base64 = { version = "0.21.2" }
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
derivative = "2.2.0"
env_logger = "0.10.0"
http-manager = { version = "0.0.14" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0.0"
log = "0.4.18"
semver = "1.0.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96" # https://github.com/serde-rs/json/releases
serde_with = { version = "3.0.0", features = ["hex"] }
tokio = { version = "1.28.2", features = ["fs", "rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["gzip"] }

[dev-dependencies]
random-manager = "0.0.5"
