[package]
name = "timestampvm"
version = "0.0.18" # https://crates.io/crates/timestampvm
edition = "2021"
rust-version = "1.70"
publish = true
description = "Timestamp VM in Rust"
documentation = "https://docs.rs/timestampvm"
license = "BSD-3-Clause"
repository = "https://github.com/ava-labs/timestampvm-rs"
readme = "../README.md"

[dependencies]
avalanche-types = { version = "0.1.4", features = ["subnet", "codec_base64"] } # https://crates.io/crates/avalanche-types
base64 = { version = "0.21.5" }
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.4.17", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
derivative = "2.2.0"
env_logger = "0.10.1"
http-manager = { version = "0.0.14" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0.0"
log = "0.4.19"
semver = "1.0.21"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111" # https://github.com/serde-rs/json/releases
serde_with = { version = "3.4.0", features = ["hex"] }
tokio = { version = "1.35.1", features = ["fs", "rt-multi-thread"] }
tonic = { version = "0.10.2", features = ["gzip"] }

[dev-dependencies]
random-manager = "0.0.5"
