[package]
name = "e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.70"
publish = false
description = "e2e tests for timestampvm"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-installer = "0.0.77"
avalanche-network-runner-sdk = "0.3.4" # https://crates.io/crates/avalanche-network-runner-sdk
avalanche-types = { version = "0.1.5", features = ["jsonrpc_client", "subnet"] } # https://crates.io/crates/avalanche-types
env_logger = "0.11.3"
log = "0.4.22"
random-manager = "0.0.5"
serde_json = "1.0.116" # https://github.com/serde-rs/json/releases
tempfile = "3.10.1"
timestampvm = { path = "../../timestampvm" }
tokio = { version = "1.37.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases
